Definindo testes automatizados para User e Surveys

--- a/api/ormconfig.json
+++ b/api/ormconfig.json
@@ -7,7 +7,7 @@
     "entities": [
         "./src/models/**.ts"
     ],
-    "logging": true,
+    "logging": false,
     "cli": {
         "migrationsDir": "./src/database/migrations"
     }
